--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "melikechan.github.io",
+  "name": "sefakurtipek.github.io",
   "version": "1.0.0",
-  "homepage": "https://melikechan.github.io/",
+  "homepage": "https://sefakurtipek.github.io/",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.14",
