--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "melikechan",
-  "name": "melikechan's Personal Website",
+  "short_name": "sefakurtipek",
+  "name": "sefakurtipek's Personal Website",
   "icons": [
     {
       "src": "favicon.ico",
